# miniagent

./: .gitignore  CMakeLists.txt  TASKS.md
include/miniagent/: OpenAiProvider.hpp  Provider.hpp
src/: OpenAiProvider.cpp  main.cpp
文档/: 任务1-调通LLM-API教程.md
